[gd_scene load_steps=3 format=3 uid="uid://cb65rgtc7euu4"]

[ext_resource type="SpriteFrames" uid="uid://ctdp47wgdbw7h" path="res://art/twinkle_star.res" id="1_dfyk7"]
[ext_resource type="Script" path="res://twinkle_star.gd" id="1_tdejp"]

[node name="TwinkleStar" type="Node2D"]
script = ExtResource("1_tdejp")

[node name="TwinkleStar" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_dfyk7")
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": true,
"source": ""
}

[node name="TwinkleTimer" type="Timer" parent="."]

[connection signal="timeout" from="TwinkleTimer" to="." method="_on_twinkle_timer_timeout"]
